아이템 메소드 추가